--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -42,11 +42,11 @@
       {{#if newUser}}
         <p>You need to login.</p>
       {{else}}  
-       <p>Hello, {{current_user}}, you are logged in.</p>
+       <p class="greeting" >Hello, {{current_user}}, you are logged in.</p>
          
       {{/if}}    
 
-    <div>Share your life with your friends!</div>
+    <p class="tagline">Share your life with your friends!<p>
 
     {{{body}}}
   </body>
