--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,6 +10,24 @@ a {
   color: rgb(107, 84, 140);
 }
 
+p {
+  display: flex;
+  font-family: 'Pacifico', cursive;';
+  font-size: 14px;
+  color: #876B5B;
+}
+
+.greeting {
+  font-family: 'Pacifico', cursive;
+  font-size: 20px;
+  color: #876B5B;
+}
+.tagline {
+  font-family: 'Pacifico', cursive;
+  font-size: 17px;
+  color: #876b5b99;
+}
+
 h1 {
   font-family: 'Pacifico', cursive;
   color: #BF9A84;
@@ -52,6 +70,7 @@ h1 {
 }
 
 .post-user {
+  /* display: flex; */
   font-weight: bold;
   font-size: 18px;
 }
@@ -63,8 +82,6 @@ h1 {
   margin: auto;
   vertical-align: middle;
 }
-
-
 
 
 .navbar-default .logOutButton {
@@ -129,4 +146,19 @@ textarea {
   font-size: 20px;
 }
 
+.button {
+  /* background-color: #BF9A84; */
+  border: none;
+  border-radius: 15px;
+  color: rgb(140, 69, 28);
+  padding: auto;
+  text-align: center;
+  font-size: 12px;
+  font-weight: bolder;
+  margin: auto;
+}
+
+.comment-button {
+  display: flex;
+}
 /* font-family: 'Dosis', sans-serif */
