--- a/views/posts/profile.hbs
+++ b/views/posts/profile.hbs
@@ -1,21 +1,21 @@
+<h1>Welcome to your profile page!</h1><br>
 
-<p>Hello.Welcome to your profile page.</p>
-
-<p>Name: {{current_user}}</p>
-<p>Profile Picture:</p>
-<p>DOB: {{current_user_dob}}</p>
-<p>Number of Posts:</p>
-
-{{!-- {{current_user_profilepicture}} --}}
-
-<img src="data:image/png;base64, {{current_user_profilepicture}}">
-
-<ul class="posts">
+<div class="profile">
+  <div>
+    <img class='profile-pic' src="data:image/png;base64, {{current_user_profilepicture}}" >
+  </div>
+  <div><br><br>
+    <p>Name:<br><span> {{current_user}}</span></p>
+    <p>DOB:<br><span> {{current_user_dob}}</span></p>
+  </div>
+</ul>
+</div>
+<ul class="user-posts">
   {{!-- looks through the posts table --}}
   {{#each posts}}
-     <li>{{this.message}}</li> 
-      <li>{{this.likes}} likes</li>
-      <li>{{dateFormat this.createdAt "dddd, MMMM Do YYYY, h:mm:ss a"}}</li>
+      <ul>{{this.message}}</ul> 
+      <ul>{{this.likes}} likes</ul>
+      <ul>{{dateFormat this.createdAt "dddd, MMMM Do YYYY, h:mma"}}</ul>
       <br>
  {{/each}}
 </ul>
