even more styling

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -40,8 +40,9 @@ h1 {
 
 h2 {
   font-family: 'Pacifico', cursive;
+  font-size: 40px;
   color: rgb(240, 236, 216);
-  margin: 5px;
+  margin: 10px;
 }
 
 span {
@@ -61,6 +62,7 @@ span {
   display: flex;
   margin: auto;
   font-size: 18px;
+  text-align: left;
   background-color: #F0ECD8;
   border-radius: 15px;
   padding: 1rem 1rem;
@@ -125,13 +127,12 @@ span {
 #comments {
   font-size: 16px;
 }
+
 .post-user {
   /* display: flex; */
   font-weight: bold;
   font-size: 18px;
 }
-
-
 
 .navbar-default .logOutButton {
   color: rgb(107, 84, 140,);
@@ -210,9 +211,13 @@ textarea {
   /* float: none; */
   margin: 10px;
 }
-
+.my-posts-text {
+  font-family: 'Pacifico', cursive;
+  font-size: 40px;
+  color: rgb(240, 236, 216);
+  margin: 10px;
+}
 .user-posts {
-  flex-grow: 1;
   /* background-color: #F0ECD8; */
   padding: 5px 5px 5px 5px;
   border-radius: 15px;
@@ -249,7 +254,7 @@ textarea {
   color: rgb(140, 69, 28);
   padding: auto;
   text-align: center;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: bolder;
   margin: auto;
 }
