--- a/views/posts/profile.hbs
+++ b/views/posts/profile.hbs
@@ -11,7 +11,7 @@
 </ul>
 </div>
 <div class="user-posts-container">
-  <h2>My posts</h2>
+  <div class="my-posts-text">My posts</div>
   <div class="user-posts">
    
   {{!-- looks through the posts table --}}
