--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,2 +1,20 @@
-<h1 class="title">{{title}}</h1>
+{{!-- <h1 class="title">{{title}}</h1> --}}
 <p>Welcome to {{title}}</p>
+<br>
+
+<form id="new-session-form" action="/sessions" method="post">
+  <label for="email">Email: </label>
+  <input id="email" type="email" name="email" value="">
+  <label for="password">Password: </label>
+  <input id="password" type="password" name="password" value=""> <br>
+  <br> <input id="submit" type="submit" value="Submit">
+</form> <br>
+
+<form id="new-session-form" action="/users/new" method="get">
+<input id="submit" type="submit" value="Sign up">
+</form> <br>
+
+
+<form id="new-session-form" action="/sessions" method="post">
+<input id="submit" type="submit" value="Forgot password">
+</form>
