--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,97 +1,156 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-<style>
 
-nav {
-  width: 180px;
-  background: white;
-  color: rgba(0, 0, 0, 0.87);
-  -webkit-clip-path: circle(24px at 30px 24px);
-  clip-path: circle(24px at 32px 24px);
-  -webkit-transition: -webkit-clip-path 0.5625s, clip-path 0.375s;
-  transition: -webkit-clip-path 0.5625s, clip-path 0.375s;
-}
-nav:hover {
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
-  -webkit-transition-duration: 0.75s;
-  transition-duration: 0.75s;
-  -webkit-clip-path: circle(390px at 225px 24px);
-  clip-path: circle(390px at 150px 24px);
-}
-a {
-  display: block;
-  line-height: 30px;
-  padding: 0 20px;
-  color: inherit;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-a:hover { background: #FFE082; }
-a:active { background: #FFCA28; }
-.navicon {
-  padding: 23px 20px;
-  cursor: pointer;
-  -webkit-transform-origin: 32px 24px;
-  -ms-transform-origin: 32px 24px;
-  transform-origin: 32px 24px;
-}
-.navicon div {
-  position: relative;
-  width: 20px;
-  height: 2px;
-  background: rgba(0, 0, 0, 0.87);
-}
-.navicon div:before,
-.navicon div:after {
-  display: block;
-  content: "";
-  width: 20px;
-  height: 2px;
-  background: rgba(0, 0, 0, 0.87);
-  position: absolute;
-}
-.navicon div:before { top: -7px; }
-.navicon div:after { top: 7px; }
+<head>
+  <title>Practice</title>
+  <link rel="shortcut icon" type="image/jpg" href="images/favicon.ico">
+
+</head>
+
+<body>
+  <div class="container">
+    <div class="cat">
+      <div class="face">
+        <div class="ear-1">
+          <div class="inner-1"></div>
+        </div>
+        <div class="ear-r">
+          <div class="inner-2"></div>
+        </div>
+        <div class="eye-1">
+          <div class="eyeball"></div>
+        </div>
+        <div class="eye-r">
+          <div class="eyeball"></div>
+        </div>
+        <div class="nose">
+          <div class="l1"></div>
+          <div class="l2"></div>
+        </div>
+      </div>
+      <div class="body">
+        <div class="paw-1"></div>
+        <div class="paw-2"></div>
+        <div class="tail"></div>
+      </div>
+      <div class="shadow"></div>
+    </div>
+  </div>
+</body>
+
+
+<style>
+  nav {
+    width: 180px;
+    background: white;
+    color: rgba(0, 0, 0, 0.87);
+    -webkit-clip-path: circle(24px at 30px 24px);
+    clip-path: circle(24px at 32px 24px);
+    -webkit-transition: -webkit-clip-path 0.5625s, clip-path 0.375s;
+    transition: -webkit-clip-path 0.5625s, clip-path 0.375s;
+  }
+
+  nav:hover {
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+    -webkit-transition-duration: 0.75s;
+    transition-duration: 0.75s;
+    -webkit-clip-path: circle(390px at 225px 24px);
+    clip-path: circle(390px at 150px 24px);
+  }
+
+  a {
+    display: block;
+    line-height: 30px;
+    padding: 0 20px;
+    color: inherit;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+
+  a:hover {
+    background: #FFE082;
+  }
+
+  a:active {
+    background: #FFCA28;
+  }
+
+  .navicon {
+    padding: 23px 20px;
+    cursor: pointer;
+    -webkit-transform-origin: 32px 24px;
+    -ms-transform-origin: 32px 24px;
+    transform-origin: 32px 24px;
+  }
+
+  .navicon div {
+    position: relative;
+    width: 20px;
+    height: 2px;
+    background: rgba(0, 0, 0, 0.87);
+  }
+
+  .navicon div:before,
+  .navicon div:after {
+    display: block;
+    content: "";
+    width: 20px;
+    height: 2px;
+    background: rgba(0, 0, 0, 0.87);
+    position: absolute;
+  }
+
+  .navicon div:before {
+    top: -7px;
+  }
+
+  .navicon div:after {
+    top: 7px;
+  }
 </style>
 </head>
 <title>{{title}}</title>
-<body>
-<h1 style="text-align:center"> acebook </h1>
-<p>
-  {{pagename}}
-</p>
 
-{{#if shownavbar}}
-<nav>
-  <div class="navicon">
-    <div></div>
-  </div>
-  <a href="/posts">Home</a>
-  <a href="/users">Friends</a>
+<body>
+  <h1 style="text-align:center"> acebook </h1>
+  <p>
+    {{pagename}}
+  </p>
+
+  {{#if shownavbar}}
+  <nav>
+    <div class="navicon">
+      <div></div>
+    </div>
+    <a href="/posts">Home</a>
+    <a href="/friends">Friends</a>
     <a href="/">Logout</a>
 
-</nav>
-{{/if}}
+  </nav>
+  {{/if}}
 </body>
+
 </html>
 
 
 <html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    {{!-- <form action='/sessions?_method=DELETE' method='POST'>
-      <input type="submit" value="Home">
-    </form> --}}
-    {{{body}}}
 
-  </body>
+<head>
+  <title>{{title}}</title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+</head>
+
+<body>
+  {{!-- <form action='/sessions?_method=DELETE' method='POST'>
+    <input type="submit" value="Home">
+  </form> --}}
+  {{{body}}}
+
+</body>
+
 </html>
