--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,10 +1,36 @@
+<html>
+<head>
+<script>
+{{!-- const button = document.getElementById('like-button');
+button.addEventListener('click', () => {
+console.log('likes increases?');
+document.getElementById('likes').innerHTML ++;
+}) --}}
+  let likes = 0;
+  function like() {
+    likes++;
+    document.getElementById("testlike").textContent = `Like (${likes})`;
+  }
+  </script>
+</head>
+
+<body>
+<button id="testlike" onclick="like()">Like 0</button>
 <h1>Timeline</h1>
 <ul class="posts">
   {{#each posts}}
   <li>{{this.message}}</li> 
-  <li>{{this.likes}} likes</li>
+  {{!-- <li id="likes">{{this.likes}}</li> --}}
+  <li id="likes">0</li>
   <li>{{this.date}}</li>
+  <button> <img src="/images/paw.jpg" class="like-button"/></button>
+
+  {{!-- link a button with id = {{post_id}} or something like that and then have the like associated
+   --}}
+
   {{/each}}
 </ul>
 
 <a class="new-post-link" href="/posts/new">New post</a>
+</body>
+</html>
