Add love button and redirects for sign-up

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,13 +4,14 @@ body {
 }
 
 a {
-  color: #00B7FF;
+  color: #911758;
 }
 
 .like-button{ 
   width:15px;
   height:15px;
 }
+
 .row{
   width:15px;
   height:15px;
