--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,9 +3,8 @@
 <html>
 
 <head>
-  <title>Practice</title>
+  <title>Catbook</title>
   <link rel="shortcut icon" type="image/jpg" href="images/favicon.ico">
-
 </head>
 
 <body>
@@ -43,8 +42,8 @@
 <style>
   nav {
     width: 180px;
-    background: white;
-    color: rgba(0, 0, 0, 0.87);
+    background: rgb(245, 241, 244);
+    color: rgba(8, 8, 8, 0.87);
     -webkit-clip-path: circle(24px at 30px 24px);
     clip-path: circle(24px at 32px 24px);
     -webkit-transition: -webkit-clip-path 0.5625s, clip-path 0.375s;
