--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -5,9 +5,14 @@
 <form id="new-session-form" action="/sessions" method="post">
   <label for="email">Email: </label>
   <input id="email" type="email" name="email" value="">
+  <br>
   <label for="password">Password: </label>
   <input id="password" type="password" name="password" value=""> <br>
   <br> <input id="submit" type="submit" value="Submit">
+  {{#if emailExists}} 
+  Email already exists!
+  {{/if}}
+
 </form> <br>
 
 <form id="new-session-form" action="/users/new" method="get">
