--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,3 +1,8 @@
+<html>
+<head>
+  
+</head>
+  <body>
 <form id="new-user-form" action="/users" method="post">
   <label for="email">Email: </label>
   <input id="email" type="email" name="email" value="">
@@ -5,3 +10,5 @@
   <input id="password" type="password" name="password" value="">
   <input id="submit" type="submit" value="Submit">
 </form>
+</body>
+</html>
