--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,5 +1,5 @@
 {{!-- <h1 class="title">{{title}}</h1> --}}
-<p>Welcome to {{title}}</p>
+<p>Welcome to Acebook</p>
 <br>
 
 <form id="new-session-form" action="/sessions" method="post">
@@ -7,11 +7,22 @@
   <input id="email" type="email" name="email" value="">
   <br>
   <label for="password">Password: </label>
-  <input id="password" type="password" name="password" value=""> <br>
-  <br> <input id="submit" type="submit" value="Submit">
+  <input id="password" type="password" name="password" value=""> <br> <br>
   {{#if emailExists}} 
-  Email already exists!
+  Email already exists! <br> 
+  Please try to log in, or try to sign up with a different email.
   {{/if}}
+   {{#if wronguser}}
+  User does not exist, please sign up!
+  {{/if}}
+  {{#if wrongpass}}
+  Password is incorrect, please try again.
+  {{/if}}
+  <br>
+  {{!-- password and user prompts for incorrect --}}
+  <br>
+  <br> <input id="submit" type="submit" value="Submit">
+
 
 </form> <br>
 
@@ -19,7 +30,7 @@
 <input id="submit" type="submit" value="Sign up">
 </form> <br>
 
-
+{{!-- currently doesn't work needs to have a new route added with a form --}}
 <form id="new-session-form" action="/sessions" method="post">
 <input id="submit" type="submit" value="Forgot password">
 </form>
