friends page and adding friends

--- a/views/friends/index.hbs
+++ b/views/friends/index.hbs
@@ -1,1 +1,23 @@
+<html>
+
+
+<head>
 <h1> Furrends </h1>
+</head>
+
+<body>
+{{!-- loop through the friends list array and print each one to the screen --}}
+{{#each friendslist }}  
+<div>
+    {{this}} <br>
+</div>
+
+{{/each}}
+
+</body>
+
+
+
+
+
+</html>
