--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -114,9 +114,9 @@
 </style>
 </head>
 <title>{{title}}</title>
-
+<br><br>
 <body>
-  <h1 style="text-align:center"> acebook </h1>
+  <h1 font=14px style="text-align:center"> Catbook </h1>
   <p>
     {{pagename}}
   </p>
