--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -129,6 +129,7 @@
     
     <a href="/posts">Home</a>
     <a href="/friends">Friends</a>
+    <a href="/posts/explore">Explore posts</a>
     <a href="/">Logout</a>
 
   </nav>
